--- a/examples/ps_geometry_spline_editor.html
+++ b/examples/ps_geometry_spline_editor.html
@@ -407,7 +407,7 @@
 						if(radius<300){
 							lineMaterial1 = new THREE.LineBasicMaterial({color: 0xe01616});
 						} else {
-							lineMaterial1 = new THREE.LineBasicMaterial({color: 0xE5B80B});
+							lineMaterial1 = new THREE.LineBasicMaterial({color: 0x0000ff});
 						}
 
 						const points1 = [];
