--- a/examples/ps_geometry_spline_editor.html
+++ b/examples/ps_geometry_spline_editor.html
@@ -19,7 +19,7 @@
 
 		<div id="container"></div>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - geometry - catmull spline editor
+			<a href="https://profisketch.com" target="_blank" rel="noopener">ProfiSketch.com</a> - Анализ допустимого радиуса изгиба труб
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -44,6 +44,7 @@
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { TransformControls } from 'three/addons/controls/TransformControls.js';
 
+			let ARC_SEGMENTS = 60;
 
 			let container;
 			let camera, scene, renderer;
@@ -55,7 +56,7 @@
 			let lineHepers = new Array();
 			let radiusLimit
 			let tubeRadius = 20
-			let tubularSegment = 20
+			let tubularSegment = ARC_SEGMENTS
 			let radialSegments =10
 			let tubeOpacity = 0.5
 			let tubeRoughness = 0.5
@@ -69,7 +70,7 @@
 			const geometry = new THREE.BoxGeometry( 15, 15, 15 );
 			let transformControl;
 
-			let ARC_SEGMENTS = 60;
+			
 
 			const splines = {};
 
@@ -77,7 +78,7 @@
 				tubeMetalness:0.5,
 				tubeRoughness:0.5,
 				tubeOpacity:0.5,
-				tubularSegment:20,
+				tubularSegment:ARC_SEGMENTS,
 				radialSegments:10,
 				// ARC_SEGMENTS:20,
 				tubeRadius:20,
