--- a/examples/ps_obj.html
+++ b/examples/ps_obj.html
@@ -26,6 +26,25 @@ body
     outline: none;
 }
 
+#btn-explode
+{
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+	padding: 0.5rem;
+	background-color: palevioletred;
+	color: white
+}
+#btn-info
+{
+    position: absolute;
+    top: 2rem;
+    left: 8rem;
+	padding: 0.5rem;
+	background-color: palevioletred;
+	color: white
+}
+
 		</style>
 	</head>
 	<body>
@@ -34,7 +53,8 @@ body
 		<!-- <div id="info">
 			<a href="https://profisketch.com" target="_blank" rel="noopener">ProfiSketch.com</a> - Анализ допустимого радиуса изгиба труб
 		</div> -->
-
+<button id="btn-explode">EXPLODE</button>
+<button id="btn-info">INFO</button>
 	
 
 	</body>
